# bice-rs

./: .dockerignore  .gitignore  B1CE.bice  Cargo.toml  README.md  dockerfile
.github/workflows/: build.yml  rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: storage.rs  vault.rs
src/: cpu_entropy.rs  encryption.rs  entropy.rs  esp32.rs  generator.rs  lib.rs  main.rs  models.rs  storage.rs  sync.rs  vault.rs
src/tui/: app.rs  mod.rs  ui.rs
