[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.37.2"
getrandom = "0.3"
rdrand = "0.8.3"
crypto = "0.5.1"
tiny-keccak = { version = "2.0.2", features = ["shake"] }
hex = "0.4.3"
rand = "0.9.2"
rand_chacha = "0.9.0"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.54", features = ["derive"] }
secrecy = "0.10.3"
ratatui = { version = "0.30.0", features = ["all-widgets"] }
thiserror ={ version = "2.0.18"}
serde = { version = "1.0.228" }