[package]
name = "bice_rs"
version = "0.1.2-beta"
edition = "2024"

default-run = "bice_rs"

[dependencies]
sysinfo = "0.37.2"
getrandom = "0.3"
crypto = "0.5.1"
tiny-keccak = { version = "2.0.2", features = ["shake"] }
hex = "0.4.3"
rand_chacha = "0.9.0"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.57", features = ["derive"] }
secrecy = "0.10.3"
ratatui = { version = "0.30.0", features = ["all-widgets"] }
thiserror ={ version = "2.0.18"}
serde = { version = "1.0.228", features = ["derive"]}
postcard = { version = "1.1.3", features = ["use-std"] }
rand_core = { version = "0.10", default-features = false }
rand_core_06 = { package = "rand_core", version = "0.6" }
crossterm = "0.29.0"
color-eyre = "0.6.5"
arboard = "3.6.1"
ureq = { version = "2", features = ["json"] }
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
x25519-dalek = { version = "2", features = ["static_secrets"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"
serde_bytes = "0.11"
serialport = "4"
ed25519-dalek = { version = "2", features = ["default"] }
arbitrary = { version = "1", optional = true, features = ["derive"] }